css/frame.css
#content {
	overflow: auto;
	position: absolute;
	z-index: 75;
	top: 0;
	right: 0;
	bottom: 60px;
	left: 0;
	width: auto;
	background-color: white;
}

#canvas {
	position: absolute;
	top: 10px;
	right: 310px;
	bottom: 10px;
	left: 10px;
}
#control_wrapper_canvas:not(:empty) {
	margin: 15px 0 0 5px;
}
#control_wrapper_canvas:not(:empty) + #canvas {
	top: 55px;
	left: 50px;
}
.goog-combobox input {
	min-height: auto;
}
.loader {
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top: -16px;
	margin-left: -16px;
}

/******************************************************************************/
/********************************  SIDEBAR  ***********************************/
/******************************************************************************/

#sidebar {
	overflow: auto;
	position: absolute;
	z-index: 75;
	top: 0;
	right: 0;
	bottom: 60px;
	width: 350px;
	border-left: 1px solid #dfdfdf;
	background: whitesmoke;

	-webkit-overflow-scrolling: touch;
}

.viz-group {
	margin: 0;
	font-size: 12px;
	line-height: 18px;
	list-style: none;
}

.viz-group .viz-group-header .viz-group-title {
	margin: 10px 0;
	padding: 15px 20px;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	color: #555d66;
	background: #fff;
}

.viz-group-wrapper ul .viz-group-title {
	border-top: 1px solid #ddd;
}

.viz-group-wrapper ul li {
	border-top: 1px solid #ddd;
}

.viz-group-wrapper ul ul li.viz-subsection {
	margin: 5px;
	border: 1px solid #ddd;
}

.viz-group-wrapper .viz-group .viz-group .viz-group-title {
	position: relative;
	margin: 0;
	padding: 10px 10px 11px 14px;
	border-top: none;
	border-bottom: none;
	border-left: 4px solid #fff;
	color: #555d66;
	background-color: #fff;
	font-size: 14px;
	font-weight: 600;
	line-height: 21px;
	cursor: pointer;
	transition: 0.15s color ease-in-out,0.15s background-color ease-in-out,0.15s border-color ease-in-out;
}

.viz-title-small {
	font-size: smaller;
}

.viz-group-wrapper .viz-group .viz-group:hover .viz-group-title,
.viz-group-wrapper .viz-group .viz-group.open .viz-group-title {
	border-left-color: #0073aa;
	color: #0073aa;
	background: #f3f3f5;
}

.viz-group-wrapper .viz-group .viz-group .viz-group-title:after {
	position: absolute;
	z-index: 1;
	top: 11px;
	right: 10px;
	color: #a0a5aa;
	font: 400 20px/1 dashicons;
	content: "\f345";
}

.viz-group-wrapper .viz-group .viz-group.open .viz-group-title:after {
	content: "\f347";
}

.viz-group-wrapper .viz-group .customize-section-back {
	display: block;
	float: left;
	width: 42px;
	height: 49px;
	margin: 0 15px 0 0;
	padding: 0;
	border: none;
	border-top: 1px solid #ddd;
	border-right: 1px solid #ddd;
	border-left: 4px solid #fff;
	background: #fff;
	box-shadow: none;
	cursor: pointer;
	transition: color 0.15s ease-in-out,border-color 0.15s ease-in-out,background 0.15s ease-in-out;
}

.viz-group-wrapper .viz-group .customize-section-back:hover {
	border-left-color: #0073aa;
	outline: 0;
	color: #0073aa;
	background: #f3f3f5;
}

.viz-group-wrapper .viz-group .customize-section-back:before {
	position: relative;
	top: -11px;
	left: -2px;
	font: 400 20px/72px dashicons;
	content: "\f341";
}

.viz-group-wrapper.full-height {
	float: left;
	position: relative;
	width: 100%;
	height: 100%;
	margin: 0;
}

.viz-group.bottom-fixed {
	display: block;
	position: absolute;
	bottom: 0;
	width: 100%;
}

.viz-group ul li h2,
.viz-group ul li h3 {
	padding: 7px 15px 7px 35px;
}

.viz-group h2 .dashicons,
.viz-group h3 .dashicons {
	margin-right: 5px;
	vertical-align: -5px;
}

.viz-group-content {
	display: none;
	margin: 0;
	padding: 0;
	background-color: #fdfdfd;
}

div.viz-group-content {
	padding: 15px;
}

.viz-group.open > .viz-group-content {
	display: block;
}

.viz-group-description {
	margin: 0;
	padding: 5px;
	color: #555;
	font-size: 12px;
	text-align: left;
}

div.viz-group-content .viz-group-description {
	padding: 5px;
	font-family: "Montserrat",sans-serif;
	font-weight: 300;
}

.initial-screen .viz-group-description {
	padding: 0;
	padding: 10px 20px 20px;
	font-family: "Montserrat",sans-serif;
	font-weight: 300;
}

.viz-section-title {
	display: block;
	position: relative;
	margin-bottom: 5px;
	padding: 4px 20px;
	border-top: 1px solid #eee;
	border-bottom: 1px solid #eee;
	background-color: rgba(0, 0, 0, 0.02);
	box-shadow: 0 4px 4px -4px rgba(0, 0, 0, 0.1);
	font-weight: bold;
	cursor: pointer;
}

.viz-group-wrapper ul ul li .viz-section-title {
	margin-bottom: 0;
	border: none;
	box-shadow: none;
}

.viz-section-title::after {
	position: absolute;
	z-index: 1;
	top: 13px;
	right: 20px;
	width: 0;
	height: 0;
	border-width: 4px 4px 0;
	border-style: solid;
	border-color: #ccc transparent;
	content: "";
}

.viz-section-title.open::after {
	border-width: 0 4px 4px;
}

.section-items,
.viz-section-items {
	display: none;
	padding: 15px;
}

.viz-section-items.open {
	display: block;
}

.more-info {
	display: none;
	float: right;
	color: #21759b;
	font-size: 85%;
	font-weight: normal;
	text-decoration: none;
}

.viz-info-msg {
	font-weight: bold !important;
	font-style: italic;
}

.viz-info-msg::before {
	font-family: dashicons;
	content: "\f488";
	margin-right: 5px;
}

.viz-section-description {
	margin: 0;
	/*display: none;*/
	padding: 0;
	color: gray;
	font-size: 11px;
}

.viz-section-table {
	width: 100%;
}

.section-delimiter,
.viz-section-delimiter {
	margin: 15px 0;
	border-top: 1px dashed #ccc;
}

.viz-section-table-column {
	width: 50%;
	padding: 0 1px;
	text-align: left;
	vertical-align: top;
}

.viz-section-item {
	margin-bottom: 10px;
}

.control-select,
.control-text {
	width: 100%;
}

.control-check {
	float: right;
}

.control-check::after {
	clear: both;
}

.viz-section-description ul {
	margin: 0 0 0 25px;
	list-style: circle;
}

.viz-section-description li {
	margin: 0;
	list-style: circle;
}

#rate-the-plugin {
	margin-top: 40px;
	padding: 20px;
	border-top: 1px dashed #ddd;
	text-align: center;
}

.rate-the-plugin {
	width: 40% !important;
	margin-top: -5px;
}
/* ... */

